_sass/resume/layout.scss
﻿/**
*	Layout Styles
**/

/* TABLE OF CONTENTS
	- Header
	- Section
	- Started
	- About
	- Resume
	- Skills
	- Service
	- Portfolio
	- Box Items
	- Contacts
	- Blog
	- Footer
	- Popups
*/

/* - Header */
.header {
	padding: 50px;
	position: fixed;
	left: 0;
	top: 0;
	width: 100%;
	z-index: 100;
	@include transition(all 0.7s cubic-bezier(0.165, 0.85, 0.45, 1));

	&.fixed {
		padding-top: 30px;
		padding-bottom: 30px;
		top: 0;
		background: $default_bg;
	}

	&:after {
		content: '';
		position: relative;
		display: block;
		clear: both;
	}

	.head-top {
		position: relative;
	}

	.menu-btn {
		position: relative;
		margin: 0 auto;
		width: 30px;
		height: 20px;

		&:before,
		&:after {
			content: '';
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 2px;
			background: $white_color;
			@include transition(all 0.3s ease 0s);
		}

		&:after {
			top: auto;
			bottom: 0;
		}

		span {
			position: absolute;
			top: 50%;
			left: 0;
			width: 100%;
			height: 2px;
			background: $white_color;
			margin-top: -1px;
			@include transition(all 0.3s ease 0s);
		}
	}

	.logo {
		position: absolute;
		overflow: hidden;
		top: 50%;
		width: 150px;
		font-size: $default_size;
		line-height: 2.5;
		font-weight: 600;
		color: rgba(255, 255, 255, 0.5);
		white-space: nowrap;
		@include transform(translateY(-50%));

		img {
			max-width: 100%;
			width: auto;
			height: auto;
			display: block;
		}

		a {
			color: rgba(255, 255, 255, 0.5);
			text-decoration: none;
			display: block;
		}

		strong {
			color: $white_color;
		}
	}

	.top-menu {
		text-align: right;

		.menu-top-menu-container {
			display: inline-block;
		}

		ul {
			margin: 0;
			padding: 0;
			list-style: none;

			li {
				margin-left: 40px;
				display: inline-block;
				vertical-align: top;
				position: relative;

				a {
					position: relative;
					overflow: hidden;
					display: block;
					font-size: 1em;
					line-height: 2.5;
					color: $white_color;
					font-weight: 600;
					opacity: 0.5;
					text-decoration: none;
					@include transition(color 0.7s cubic-bezier(0.165, 0.85, 0.45, 1));
				}

				&:hover>.sub-menu,
				&:hover>.children {
					opacity: 1;
					pointer-events: auto;
				}

				&:hover>a,
				&.current-menu-item>a {
					opacity: 1;
				}

				&.menu-item-has-children>a .mask-lnk:after {
					content: "\f078";
					margin-left: 5px;
					position: relative;
					top: 0;
					display: inline-block;
					font-family: 'Font Awesome 5 Free';
					font-weight: 900;
					font-size: 0.8em;
					-moz-osx-font-smoothing: grayscale;
					-webkit-font-smoothing: antialiased;
					display: inline-block;
					font-style: normal;
					font-variant: normal;
					text-rendering: auto;
					line-height: 1;
				}
			}
		}
	}

	.top-menu-nav .sub-menu,
	.top-menu-nav .children {
		position: absolute;
		left: 0;
		top: 40px;
		padding: 10px 0;
		width: 190px;
		text-align: left;
		background: $extra_bg;
		z-index: 50;
		opacity: 0;
		pointer-events: none;
		@include transition(all 0.3s ease 0s);
		@include box-shadow(0 5px 50px rgba(0, 0, 0, 0.1));
	}

	.top-menu ul li:last-child .sub-menu,
	.top-menu-nav .children {
		right: 0;
		left: auto;
	}

	.top-menu-nav .sub-menu:before,
	.top-menu-nav .children:before {
		content: '';
		position: absolute;
		left: 10px;
		top: -12px;
		border: 6px solid transparent;
		border-bottom: 6px solid $extra_bg;
	}

	.top-menu ul li:last-child .sub-menu:before,
	.top-menu-nav .children:before {
		right: 10px;
		left: auto;
	}

	.top-menu-nav .sub-menu li,
	.top-menu-nav .children li {
		margin-left: 0;
		padding: 8px 20px;
		display: block;
		border-bottom: 1px solid $lines_color;
		height: auto;
	}

	.top-menu-nav .sub-menu li:last-child,
	.top-menu-nav .children li:last-child {
		border-bottom: none;
	}

	.top-menu-nav .sub-menu li a,
	.top-menu-nav .children li a {
		margin-top: 0;
		display: block;
		font-size: $extra_small_size;
		color: $white_color;
		opacity: 0.5;
	}

	.top-menu-nav .sub-menu li .sub-menu,
	.top-menu-nav .children li .children {
		left: 100%;
		top: -10px;
	}

	.top-menu-nav .sub-menu li .sub-menu:before,
	.top-menu-nav .children li .children:before {
		content: '';
		position: absolute;
		left: -12px;
		top: 16px;
		border: 6px solid transparent;
		border-right: 6px solid $white_color;
		border-bottom: 6px solid transparent;
	}
}

.background-enabled .header .top-menu ul li.current-menu-item>a {
	opacity: 1;
}

.hover-masks .mask-lnk,
.hover-masks-logo .mask-lnk {
	position: relative;
	top: 0;
	left: 0;
	width: 100%;
	display: block;
	@include transform(translateY(0));
	-webkit-transition: opacity 0.7s cubic-bezier(0.165, 0.85, 0.45, 1), color 0.7s cubic-bezier(0.165, 0.85, 0.45, 1), transform 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
	transition: opacity 0.7s cubic-bezier(0.165, 0.85, 0.45, 1), color 0.7s cubic-bezier(0.165, 0.85, 0.45, 1), transform 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
}

.hover-masks .mask-lnk.mask-lnk-hover,
.hover-masks-logo .mask-lnk.mask-lnk-hover {
	position: absolute;
	opacity: 0;
	@include transform(translateY(32px));
}

.hover-masks a:hover .mask-lnk,
.hover-masks-logo a:hover .mask-lnk {
	opacity: 1;
	@include transform(translateY(-32px));
}

.hover-masks a:hover .mask-lnk.mask-lnk-hover,
.hover-masks-logo a:hover .mask-lnk.mask-lnk-hover {
	@include transform(translateY(0));
}

/* header active */
.header.active {
	padding-top: 4vw;
	top: 0;
	overflow: auto;
	height: 100%;
	background: $default_bg;
	-webkit-overflow-scrolling: touch;

	.menu-btn {
		&:before {
			opacity: 0;
		}

		&:after {
			bottom: 9px !important;
			@include transform(rotate(-45deg));
		}

		span {
			@include transform(rotate(45deg));
		}
	}

	.top-menu {
		height: auto;
		opacity: 1;
		visibility: visible;

		ul li .sub-menu,
		ul li .children {
			display: block;
		}

		ul>li>ul li a {
			line-height: 20px;
		}
	}
}
/* ... */

